# app/Modules/Sales/Presentation/Http/Routes/api.php
@@ -58,5 +58,11 @@ Route::prefix('api/v1')
                     'order' => '[0-9a-hjkmnp-tv-z]{26}',
                 ])
                 ->name('pos.outlets.orders.complete');
+            Route::get('pos/outlets/{outlet}/orders/{order}/receipt', [OrderController::class, 'receipt'])
+                ->where([
+                    'outlet' => '[0-9a-hjkmnp-tv-z]{26}',
+                    'order' => '[0-9a-hjkmnp-tv-z]{26}',
+                ])
+                ->name('pos.outlets.orders.receipt');
         });
     });
